--- a/app/src/main/res/layout/fragment_step_user.xml
+++ b/app/src/main/res/layout/fragment_step_user.xml
@@ -4,15 +4,22 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:orientation="horizontal"
   tools:context=".view.SignUpActivity">
 
-  <include
-    android:id="@+id/layout_step_01"
-    layout="@layout/step_user_01"/>
+  <ViewStub
+    android:id="@+id/stub_step_01"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:inflatedId="@+id/layout_step_01"
+    android:layout="@layout/step_user_01"/>
 
-  <include
-    android:id="@+id/layout_step_02"
-    layout="@layout/step_user_02"
+  <ViewStub
+    android:id="@+id/stub_step_02"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:inflatedId="@+id/layout_step_02"
+    android:layout="@layout/step_user_02"
     android:visibility="gone"/>
 
 </LinearLayout>
