--- a/app/src/main/res/layout/step_trainer_01.xml
+++ b/app/src/main/res/layout/step_trainer_01.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-  android:orientation="vertical"
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="match_parent"
+  android:orientation="vertical">
 
   <android.support.design.widget.TextInputLayout
     android:layout_width="match_parent"
@@ -17,10 +17,10 @@
 
   </android.support.design.widget.TextInputLayout>
 
-  <android.support.v7.widget.AppCompatButton
+  <android.support.design.button.MaterialButton
     android:id="@+id/btn_ok"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@android:string/ok" />
+    android:text="@android:string/ok"/>
 
 </LinearLayout>
