--- a/app/src/main/res/layout/step_trainer_02.xml
+++ b/app/src/main/res/layout/step_trainer_02.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical">
 
-
-  <android.support.v7.widget.AppCompatButton
+  <android.support.design.button.MaterialButton
     android:id="@+id/btn_upload_profile"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -36,7 +34,7 @@
 
   </android.support.design.widget.TextInputLayout>
 
-  <android.support.v7.widget.AppCompatButton
+  <android.support.design.button.MaterialButton
     android:id="@+id/btn_ok"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
