--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
   <color name="colorPrimary">#009688</color>
   <color name="colorPrimaryDark">#00796B</color>
-  <color name="colorAccent">#00B0FF</color>
+  <color name="colorAccent">#ef5350</color>
 </resources>
