--- a/app/src/main/res/layout/item_select_time.xml
+++ b/app/src/main/res/layout/item_select_time.xml
@@ -4,16 +4,28 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  tools:context=".view.TimeTableActivity">
+  android:layout_height="56dp"
+  android:paddingLeft="16dp"
+  android:paddingRight="16dp">
 
-  <TextView
+  <android.support.v7.widget.AppCompatCheckBox
+    android:id="@+id/chk_time"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World!"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"/>
+
+  <TextView
+    android:id="@+id/tv_time"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="32dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toRightOf="@id/chk_time"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="AM 10:00"/>
+
 
 </android.support.constraint.ConstraintLayout>
