--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  tools:context=".view.SignInActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto">
+  <android.support.constraint.ConstraintLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".view.SignInActivity">
 
-  <com.google.android.gms.common.SignInButton
-    android:id="@+id/google_signin_button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:buttonSize="standard"/>
+    <com.google.android.gms.common.SignInButton
+      android:id="@+id/google_signin_button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:buttonSize="standard"/>
 
-</android.support.constraint.ConstraintLayout>
+  </android.support.constraint.ConstraintLayout>
+</layout>
