--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
 
-    <android.support.v4.view.ViewPager
+    <edu.swe.healthcareapplication.view.widget.NonSwipeableViewPager
       android:id="@+id/view_pager"
       android:layout_width="match_parent"
       android:layout_height="0dp"
