--- a/app/src/main/res/layout/item_select_trainer.xml
+++ b/app/src/main/res/layout/item_select_trainer.xml
@@ -3,48 +3,51 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="96dp"
-  android:paddingLeft="16dp"
-  android:paddingRight="16dp"
+  android:layout_height="88dp"
+  android:background="?attr/selectableItemBackground"
+  android:paddingTop="@dimen/keyline_normal"
+  android:paddingLeft="@dimen/keyline_normal"
+  android:paddingRight="@dimen/keyline_normal"
   android:orientation="horizontal">
+
+  <ImageView
+    android:id="@+id/iv_profile"
+    android:layout_width="40dp"
+    android:layout_height="40dp"
+    android:alpha="0.4"
+    android:src="@drawable/ic_account_circle_black_24dp"
+    app:layout_constraintTop_toTopOf="parent"/>
 
   <TextView
     android:id="@+id/tv_name"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    app:layout_constraintBottom_toTopOf="@+id/tv_education"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toLeftOf="@+id/btn_select"
-    app:layout_constraintTop_toTopOf="parent"
+    android:layout_marginStart="@dimen/keyline_normal"
+    android:gravity="bottom"
+    android:textSize="16sp"
+    app:layout_constraintLeft_toRightOf="@+id/iv_profile"
+    app:layout_constraintRight_toRightOf="parent"
     tools:text="Name"/>
 
   <TextView
     android:id="@+id/tv_education"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    app:layout_constraintBottom_toTopOf="@id/tv_awards"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toLeftOf="@+id/btn_select"
+    android:layout_marginStart="@dimen/keyline_normal"
+    android:layout_marginTop="@dimen/keyline_mini"
+    app:layout_constraintLeft_toRightOf="@+id/iv_profile"
+    app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/tv_name"
-    tools:text="Education"/>
+    tools:text="Education: Univ"/>
 
   <TextView
     android:id="@+id/tv_awards"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toLeftOf="@+id/btn_select"
-    app:layout_constraintTop_toBottomOf="@id/tv_education"
-    tools:text="Awards"/>
-
-  <android.support.design.button.MaterialButton
-    android:id="@+id/btn_select"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/action_select"
-    app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_marginStart="@dimen/keyline_normal"
+    app:layout_constraintLeft_toRightOf="@+id/iv_profile"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+    app:layout_constraintTop_toBottomOf="@+id/tv_education"
+    tools:text="Awards: ~"/>
 
 </android.support.constraint.ConstraintLayout>
