--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<edu.swe.healthcareapplication.view.widget.NonSwipeableViewPager
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/step_container"
+  android:id="@+id/view_pager"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
