--- a/app/src/main/res/layout/step_trainer_01.xml
+++ b/app/src/main/res/layout/step_trainer_01.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:orientation="vertical">
+  android:orientation="vertical"
+  android:padding="@dimen/keyline_normal">
 
   <android.support.design.widget.TextInputLayout
     android:layout_width="match_parent"
@@ -21,6 +23,7 @@
     android:id="@+id/btn_ok"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@android:string/ok"/>
+    android:text="@android:string/ok"
+    android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
