--- a/app/src/main/res/layout/step_trainer_02.xml
+++ b/app/src/main/res/layout/step_trainer_02.xml
@@ -2,13 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:padding="@dimen/keyline_normal"
   android:orientation="vertical">
-
-  <android.support.design.button.MaterialButton
-    android:id="@+id/btn_upload_profile"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Upload profile image"/>
 
   <android.support.design.widget.TextInputLayout
     android:layout_width="match_parent"
@@ -38,6 +33,14 @@
     android:id="@+id/btn_ok"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
     android:text="@android:string/ok"/>
+
+  <android.support.design.button.MaterialButton
+    android:id="@+id/btn_upload_profile"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Upload profile image"
+    android:visibility="gone"/>
 
 </LinearLayout>
