--- a/app/src/main/res/layout/step_user_01.xml
+++ b/app/src/main/res/layout/step_user_01.xml
@@ -3,6 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:padding="@dimen/keyline_normal"
   android:orientation="vertical">
 
   <android.support.design.widget.TextInputLayout
@@ -22,7 +23,7 @@
     android:layout_height="wrap_content">
 
     <android.support.design.widget.TextInputEditText
-      android:id="@+id/edt_age"
+      android:id="@+id/edit_age"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/hint_input_age"
@@ -34,6 +35,6 @@
     android:id="@+id/btn_ok"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
     android:text="@android:string/ok"/>
-
 </LinearLayout>
