--- a/app/src/main/res/layout/step_trainer_02.xml
+++ b/app/src/main/res/layout/step_trainer_02.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:padding="@dimen/keyline_normal"
   android:orientation="vertical">
 
   <android.support.design.widget.TextInputLayout
+    android:id="@+id/edit_education_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -13,27 +16,55 @@
       android:id="@+id/edit_education"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:hint="@string/hint_education"/>
+      android:hint="@string/hint_education"
+      android:maxLines="1"/>
 
   </android.support.design.widget.TextInputLayout>
 
   <android.support.design.widget.TextInputLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:id="@+id/edit_awards_layout"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginRight="@dimen/keyline_small"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toLeftOf="@+id/btn_add_award"
+    app:layout_constraintTop_toBottomOf="@id/edit_education_layout">
 
     <android.support.design.widget.TextInputEditText
       android:id="@+id/edit_awards"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:hint="@string/hint_awards"/>
+      android:hint="@string/hint_awards"
+      android:maxLines="1"/>
 
   </android.support.design.widget.TextInputLayout>
+
+  <ImageButton
+    android:id="@+id/btn_add_award"
+    android:layout_width="40dp"
+    android:layout_height="40dp"
+    android:background="?attr/selectableItemBackground"
+    android:src="@drawable/ic_add_white_24dp"
+    android:text="Add"
+    android:tint="@color/colorAccent"
+    app:layout_constraintBottom_toBottomOf="@+id/edit_awards_layout"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/edit_awards_layout"/>
+
+  <android.support.v7.widget.RecyclerView
+    android:id="@+id/awards_list"
+    app:layout_constraintTop_toBottomOf="@+id/edit_awards_layout"
+    app:layout_constraintBottom_toTopOf="@id/btn_ok"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"/>
 
   <android.support.design.button.MaterialButton
     android:id="@+id/btn_ok"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
     android:text="@android:string/ok"/>
 
   <android.support.design.button.MaterialButton
@@ -43,4 +74,4 @@
     android:text="Upload profile image"
     android:visibility="gone"/>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
