--- a/app/src/main/res/layout/step_trainer_02.xml
+++ b/app/src/main/res/layout/step_trainer_02.xml
@@ -45,7 +45,6 @@
     android:layout_height="40dp"
     android:background="?attr/selectableItemBackground"
     android:src="@drawable/ic_add_white_24dp"
-    android:text="Add"
     android:tint="@color/colorAccent"
     app:layout_constraintBottom_toBottomOf="@+id/edit_awards_layout"
     app:layout_constraintRight_toRightOf="parent"
@@ -53,19 +52,19 @@
 
   <android.support.v7.widget.RecyclerView
     android:id="@+id/awards_list"
-    app:layout_constraintTop_toBottomOf="@+id/edit_awards_layout"
-    app:layout_constraintBottom_toTopOf="@id/btn_ok"
     android:layout_width="match_parent"
-    android:layout_height="0dp"/>
+    android:layout_height="0dp"
+    app:layout_constraintBottom_toTopOf="@+id/btn_ok"
+    app:layout_constraintTop_toBottomOf="@+id/edit_awards_layout"/>
 
   <android.support.design.button.MaterialButton
     android:id="@+id/btn_ok"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:text="@android:string/ok"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    android:text="@android:string/ok"/>
+    app:layout_constraintRight_toRightOf="parent"/>
 
   <android.support.design.button.MaterialButton
     android:id="@+id/btn_upload_profile"
