--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
@@ -19,11 +20,80 @@
 
   </android.support.design.widget.AppBarLayout>
 
-  <ListView
-    android:id="@+id/profile_info"
+  <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    android:layout_margin="@dimen/keyline_normal"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    <ImageView
+      android:id="@+id/iv_profile"
+      android:layout_width="96dp"
+      android:layout_height="96dp"
+      android:layout_marginTop="@dimen/keyline_normal"
+      android:alpha="0.4"
+      android:src="@drawable/ic_account_circle_black_24dp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"/>
+
+    <TextView
+      android:id="@+id/tv_item1_desc"
+      android:textStyle="bold"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="@dimen/keyline_normal"
+      tools:text="Name"
+      android:textColor="@color/colorAccent"
+      app:layout_constraintTop_toBottomOf="@+id/iv_profile"/>
+
+    <TextView
+      android:id="@+id/tv_item1"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="@dimen/keyline_small"
+      android:textSize="16sp"
+      app:layout_constraintTop_toBottomOf="@+id/tv_item1_desc"
+      tools:text="OOO"/>
+
+    <TextView
+      android:id="@+id/tv_item2_desc"
+      android:textStyle="bold"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="@dimen/keyline_normal"
+      tools:text="Age"
+      android:textColor="@color/colorAccent"
+      app:layout_constraintTop_toBottomOf="@+id/tv_item1"/>
+
+    <TextView
+      android:id="@+id/tv_item2"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="@dimen/keyline_small"
+      android:textSize="16sp"
+      app:layout_constraintTop_toBottomOf="@+id/tv_item2_desc"
+      tools:text="OOO"/>
+
+    <TextView
+      android:id="@+id/tv_item3_desc"
+      android:textStyle="bold"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="@dimen/keyline_normal"
+      tools:text="Gender"
+      android:textColor="@color/colorAccent"
+      app:layout_constraintTop_toBottomOf="@+id/tv_item2"/>
+
+    <TextView
+      android:id="@+id/tv_item3"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="@dimen/keyline_small"
+      android:textSize="16sp"
+      app:layout_constraintTop_toBottomOf="@+id/tv_item3_desc"
+      tools:text="OOO"/>
+
+  </android.support.constraint.ConstraintLayout>
 
   <android.support.design.widget.FloatingActionButton
     android:id="@+id/fab"
