--- a/app/src/main/res/layout/step_trainer_01.xml
+++ b/app/src/main/res/layout/step_trainer_01.xml
@@ -15,7 +15,7 @@
       android:id="@+id/edit_name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:hint="@string/hint_input_name"/>
+      android:hint="@string/hint_name"/>
 
   </android.support.design.widget.TextInputLayout>
 
