--- a/app/src/main/res/layout/step_user_01.xml
+++ b/app/src/main/res/layout/step_user_01.xml
@@ -14,7 +14,7 @@
       android:id="@+id/edit_name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:hint="@string/hint_input_name"/>
+      android:hint="@string/hint_name"/>
 
   </android.support.design.widget.TextInputLayout>
 
@@ -26,7 +26,7 @@
       android:id="@+id/edit_age"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:hint="@string/hint_input_age"
+      android:hint="@string/hint_age"
       android:inputType="number"/>
 
   </android.support.design.widget.TextInputLayout>
