--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -20,81 +20,213 @@
 
   </android.support.design.widget.AppBarLayout>
 
-  <android.support.constraint.ConstraintLayout
+  <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/keyline_normal"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <ImageView
-      android:id="@+id/iv_profile"
-      android:layout_width="96dp"
-      android:layout_height="96dp"
-      android:layout_marginTop="@dimen/keyline_normal"
-      android:alpha="0.4"
-      android:src="@drawable/ic_account_circle_black_24dp"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"/>
-
-    <TextView
-      android:id="@+id/tv_name_desc"
-      android:textStyle="bold"
+    <android.support.constraint.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/keyline_normal"
-      android:text="@string/hint_name"
-      android:textColor="@color/colorAccent"
-      app:layout_constraintTop_toBottomOf="@+id/iv_profile"/>
+      android:layout_margin="@dimen/keyline_normal">
 
-    <TextView
-      android:id="@+id/tv_name"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/keyline_small"
-      android:textSize="16sp"
-      app:layout_constraintTop_toBottomOf="@+id/tv_name_desc"
-      tools:text="OOO"/>
+      <ImageView
+        android:id="@+id/iv_profile"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_marginTop="@dimen/keyline_normal"
+        android:alpha="0.4"
+        android:src="@drawable/ic_account_circle_black_24dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
-    <TextView
-      android:id="@+id/tv_age_desc"
-      android:textStyle="bold"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/keyline_normal"
-      android:text="@string/hint_age"
-      android:textColor="@color/colorAccent"
-      app:layout_constraintTop_toBottomOf="@+id/tv_name"/>
+      <TextView
+        android:id="@+id/tv_name_desc"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_normal"
+        android:text="@string/hint_name"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_profile"/>
 
-    <TextView
-      android:id="@+id/tv_age"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/keyline_small"
-      android:textSize="16sp"
-      app:layout_constraintTop_toBottomOf="@+id/tv_age_desc"
-      tools:text="OOO"/>
+      <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_small"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_name_desc"
+        tools:text="OOO"/>
 
-    <TextView
-      android:id="@+id/tv_gender_desc"
-      android:textStyle="bold"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/keyline_normal"
-      android:text="@string/hint_gender"
-      android:textColor="@color/colorAccent"
-      app:layout_constraintTop_toBottomOf="@+id/tv_age"/>
+      <TextView
+        android:id="@+id/tv_age_desc"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_normal"
+        android:text="@string/hint_age"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_name"/>
 
-    <TextView
-      android:id="@+id/tv_gender"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/keyline_small"
-      android:lineSpacingExtra="8dp"
-      android:textSize="16sp"
-      app:layout_constraintTop_toBottomOf="@+id/tv_gender_desc"
-      tools:text="OOO"/>
+      <TextView
+        android:id="@+id/tv_age"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_small"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_age_desc"
+        tools:text="OOO"/>
 
-  </android.support.constraint.ConstraintLayout>
+      <TextView
+        android:id="@+id/tv_gender_desc"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_normal"
+        android:text="@string/hint_gender"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_age"/>
+
+      <TextView
+        android:id="@+id/tv_gender"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_small"
+        android:lineSpacingExtra="8dp"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_gender_desc"
+        tools:text="OOO"/>
+
+      <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/keyline_normal"
+        android:background="@color/divider"
+        app:layout_constraintTop_toBottomOf="@id/tv_gender"/>
+
+      <TextView
+        android:id="@+id/tv_height_desc"
+        android:textStyle="bold"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_normal"
+        android:text="@string/hint_height"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/tv_weight_desc"
+        app:layout_constraintTop_toBottomOf="@+id/divider"/>
+
+      <TextView
+        android:id="@+id/tv_height"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_small"
+        android:lineSpacingExtra="8dp"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/tv_weight"
+        app:layout_constraintTop_toBottomOf="@+id/tv_height_desc"
+        tools:text="OOO"/>
+
+      <TextView
+        android:id="@+id/tv_weight_desc"
+        android:textStyle="bold"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_normal"
+        android:text="@string/hint_weight"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintLeft_toRightOf="@+id/tv_height_desc"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider"/>
+
+      <TextView
+        android:id="@+id/tv_weight"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_small"
+        android:lineSpacingExtra="8dp"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toRightOf="@+id/tv_height"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_weight_desc"
+        tools:text="OOO"/>
+
+      <TextView
+        android:id="@+id/tv_body_fat_desc"
+        android:textStyle="bold"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_normal"
+        android:text="@string/hint_body_fat"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/tv_skeletal_muscle_desc"
+        app:layout_constraintTop_toBottomOf="@+id/tv_height"/>
+
+      <TextView
+        android:id="@+id/tv_body_fat"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_small"
+        android:lineSpacingExtra="8dp"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/tv_skeletal_muscle"
+        app:layout_constraintTop_toBottomOf="@+id/tv_body_fat_desc"
+        tools:text="OOO"/>
+
+      <TextView
+        android:id="@+id/tv_skeletal_muscle_desc"
+        android:textStyle="bold"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_normal"
+        android:text="@string/hint_skeletal_muscle"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintLeft_toRightOf="@+id/tv_body_fat_desc"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_weight"/>
+
+      <TextView
+        android:id="@+id/tv_skeletal_muscle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_small"
+        android:lineSpacingExtra="8dp"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toRightOf="@+id/tv_body_fat"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_skeletal_muscle_desc"
+        tools:text="OOO"/>
+
+      <TextView
+        android:id="@+id/tv_last_modified"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_normal"
+        android:gravity="start"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_body_fat"/>
+
+      <TextView
+        android:id="@+id/empty_user_extra"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/empty_user_extra"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/divider"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+    </android.support.constraint.ConstraintLayout>
+
+  </ScrollView>
 
   <android.support.design.widget.FloatingActionButton
     android:id="@+id/fab"
