--- a/app/src/main/res/layout/fragment_trainer_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_trainer_edit_profile.xml
@@ -45,38 +45,38 @@
   </android.support.design.widget.TextInputLayout>
 
   <android.support.design.widget.TextInputLayout
-    android:id="@+id/edit_awards_layout"
+    android:id="@+id/edit_certificates_layout"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/keyline_normal"
     android:layout_marginRight="@dimen/keyline_small"
     app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toLeftOf="@+id/btn_add_award"
+    app:layout_constraintRight_toLeftOf="@+id/btn_add_certificate"
     app:layout_constraintTop_toBottomOf="@id/edit_education_layout">
 
     <android.support.design.widget.TextInputEditText
-      android:id="@+id/edit_awards"
+      android:id="@+id/edit_certificate"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:hint="@string/hint_awards"
+      android:hint="@string/hint_certificate"
       android:maxLines="1"/>
 
   </android.support.design.widget.TextInputLayout>
 
   <ImageButton
-    android:id="@+id/btn_add_award"
+    android:id="@+id/btn_add_certificate"
     android:layout_width="40dp"
     android:layout_height="40dp"
     android:layout_marginRight="@dimen/keyline_normal"
     android:background="?attr/selectableItemBackground"
     android:src="@drawable/ic_add_white_24dp"
     android:tint="@color/colorAccent"
-    app:layout_constraintBottom_toBottomOf="@+id/edit_awards_layout"
+    app:layout_constraintBottom_toBottomOf="@+id/edit_certificates_layout"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/edit_awards_layout"/>
+    app:layout_constraintTop_toTopOf="@+id/edit_certificates_layout"/>
 
   <android.support.v7.widget.RecyclerView
-    android:id="@+id/awards_list"
+    android:id="@+id/certificate_list"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_marginLeft="@dimen/keyline_normal"
@@ -84,7 +84,7 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/edit_awards_layout"/>
+    app:layout_constraintTop_toBottomOf="@+id/edit_certificates_layout"/>
 
   <android.support.design.widget.FloatingActionButton
     android:id="@+id/fab"
