--- a/app/src/main/res/layout/item_certificate.xml
+++ b/app/src/main/res/layout/item_certificate.xml
@@ -7,7 +7,7 @@
   android:paddingStart="@dimen/keyline_small">
 
   <TextView
-    android:id="@+id/tv_award"
+    android:id="@+id/tv_certificate"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginEnd="@dimen/keyline_small"
